Cambio en el titulo de la web

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Invitación Cumpleaños 3 - Sofía</title>
+    <title>Invitación Cumpleaños 3 - Sofía Sarango</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,10 +24,10 @@
         <!-- Header Compact -->
         <header class="header-compact">
             <h1 class="title-compact">
-                🌹 Invitación Cumpleaños🌹
+                🌹 Invitación🌹
             </h1>
             <h1 class="title-compact">
-                🌹 3 🌹
+                🌹 Cumpleaños 3 🌹
             </h1>
             <h2 class="name-title">Sofía Sarango</h2>
         </header>
